--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = ""
+baseURL = "https://demianprykhodko.github.io/portfolio/"
+publishDir = "docs"
 languageCode = "en-gb"
 title = "portfolio"
 
