--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://demianprykhodko.github.io/portfolio/"
+baseURL = "https://prykhodd.com"
 publishDir = "docs"
 languageCode = "en-gb"
 title = "portfolio"
